# covid19_guidance_explorer

./: .gitignore  LICENSE  README.md  Workbook.ipynb  app.py  config.toml  pyproject.toml
covid19_guidance_explorer/: config.py  database.py  layout.py  reports.py  search.py  utils.py
covid19_guidance_explorer/pages/: __init__.py  document.py  document_issuers.py  document_types.py  document_version.py  document_versions.py  documents.py  index.py  jurisdictions.py  not_found_404.py  scratchpad.py  search_results.py  tags.py
covid19app/: database.py  layout.py  reports.py  search.py  utils.py
covid19app/assets/: styles.css  utils.js
covid19app/assets/templates/: search_results.html  search_results_documents.html  search_results_info.html
covid19app/pages/: __init__.py  document.py  document_issuers.py  document_types.py  document_version.py  document_versions.py  documents.py  index.py  jurisdictions.py  not_found_404.py  scratchpad.py  search_results.py  tags.py
