[tool.poetry]
name = "covid19_guidance_explorer"
version = "0.1.0"
description = "View, annotate, and search COVID-19 guidance documents."
authors = ["Riley Johnson <rileymillerjohnson@gmail.com>"]
readme = "README.md"
packages = [{include = "covid19_guidance_explorer"}]

[tool.poetry.dependencies]
python = "^3.11"
dash = {extras = ["celery"], version = "^2.8.1"}
dash-bootstrap-components = "^1.2.1"
dash-split-pane = "^1.0.0"
peewee = "^3.15.4"
psycopg2 = "^2.9.5"
selectolax = "^0.3.12"
furl = "^2.1.3"
flask = "^2.2.2"
flask-admin = "^1.6.0"
wtf-peewee = "^3.0.4"
pymupdf = "^1.21.1"
redis = "^4.5.0"
celery = {extras = ["redis"], version = "^5.2.7"}
dash-dangerously-set-inner-html = "^0.0.2"
openpyxl = "^3.1.0"
pandas = "^1.5.3"
jinja2 = "^3.1.2"
pyqt6 = "^6.4.2"
pyqt6-webengine = "^6.4.0"
dash-bibtex = {path = "../dash_bibtex/dist/dash_bibtex-0.0.1.tar.gz"}
dash-quill = "^0.0.4"
dash-annotator = {path = "../dash_annotator/dist/dash_annotator-0.0.1.tar.gz"}

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
black = "^23.3.0"
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
